Added find by beerName