@@ -1,10 +1,10 @@
 package nl.androidappfactory.spring6restmvc.services;
 
+import lombok.RequiredArgsConstructor;
+import nl.androidappfactory.spring6restmvc.entities.Beer;
 import nl.androidappfactory.spring6restmvc.mappers.BeerMapper;
 import nl.androidappfactory.spring6restmvc.model.BeerDTO;
 import nl.androidappfactory.spring6restmvc.repositories.BeerRepository;
-
-import lombok.RequiredArgsConstructor;
 import org.springframework.context.annotation.Primary;
 import org.springframework.stereotype.Service;
 import org.springframework.util.StringUtils;
@@ -13,7 +13,6 @@ import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
 import java.util.concurrent.atomic.AtomicReference;
-import java.util.stream.Collectors;
 
 @Service
 @Primary
@@ -24,10 +23,16 @@ public class BeerServiceJPA implements BeerService {
 
     @Override
     public List<BeerDTO> listBeers(String beerName) {
-        return beerRepository.findAll()
-                .stream()
+
+        List<Beer> beers;
+        if (beerName == null) {
+            beers = beerRepository.findAll();
+        } else {
+            beers = beerRepository.findByBeerNameIsLikeIgnoreCase(String.format("%%%s%%", beerName));
+        }
+        return beers.stream()
                 .map(beerMapper::beerToBeerDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -46,14 +51,14 @@ public class BeerServiceJPA implements BeerService {
         AtomicReference<Optional<BeerDTO>> atomicReference = new AtomicReference<>();
 
         beerRepository.findById(beerId).ifPresentOrElse(foundBeer -> {
-                    foundBeer.setBeerName(beer.getBeerName());
-                    foundBeer.setBeerStyle(beer.getBeerStyle());
-                    foundBeer.setUpc(beer.getUpc());
-                    foundBeer.setPrice(beer.getPrice());
-                    foundBeer.setQuantityOnHand(beer.getQuantityOnHand());
-                    atomicReference.set(Optional.of(beerMapper
-                            .beerToBeerDTO(beerRepository.save(foundBeer))));
-                }, () -> atomicReference.set(Optional.empty()));
+            foundBeer.setBeerName(beer.getBeerName());
+            foundBeer.setBeerStyle(beer.getBeerStyle());
+            foundBeer.setUpc(beer.getUpc());
+            foundBeer.setPrice(beer.getPrice());
+            foundBeer.setQuantityOnHand(beer.getQuantityOnHand());
+            atomicReference.set(Optional.of(beerMapper
+                    .beerToBeerDTO(beerRepository.save(foundBeer))));
+        }, () -> atomicReference.set(Optional.empty()));
 
         return atomicReference.get();
     }
